--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -41,7 +41,7 @@ $default-border-radius: 5px;
 $default-margin: 15px;
 $input-height: 30px;
 $toggle-height: 14px;
-$toggle-padding: 40px; //THIS IS HOW MUCH THE MONEY
+$toggle-padding: 10px; //THIS IS HOW MUCH THE MONEY
 $tooltip-icon-size: 24px;
 
 //TRANSITIONS
